recursion.cons.nlast.Nlast.scala.error
Erreur de compilation :
Nlast:5: error: ':' expected but ',' found.
def nfirst(l,n) = {
            ^Nlast:21: error: identifier expected but '}' found.
}
^