recursion.cons.nlast.Nlast.scala.code
def nlast(l:List[Int], n:Int): List[Int] = {
  nfirst(reverse(l), n)
}
def nfirst(l,n) = {
  if (n==0) {return Nil}
  else { return l.head::nfirst(l.tail,n-1)}
  
}
def reverse(l) = {
  reverseh(l, Nil)
}
def reverseh(l,acc) = {
  if (l==Nil) { return acc}
  else {
    return reversh(l.tail,l.head::acc)
  }
  
}